k8s/load-generator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  labels:
    app: load-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-generator
  template:
    metadata:
      labels:
        app: load-generator
    spec:
      containers:
      - name: load-generator
        image: ed16/aws-k8s-messaging-platform:load-generator-v0.1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: load-generator
spec:
  selector:
    app: load-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
