k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /load-generator(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: load-generator
                port:
                  number: 8080
